--- a/hci/stud_assess/templates/registration/login.html
+++ b/hci/stud_assess/templates/registration/login.html
@@ -13,22 +13,29 @@
     {% endif %}
 {% endif %}
 
-<h3>Teacher's Login : </h3>
+<h3> Teacher's Login</h3>
 <form method="post" action="{% url 'login' %}">
 {% csrf_token %}
-<table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+<!--<table>-->
+<!--<tr>-->
+    <!--<td>{{ form.username.label_tag }}</td>-->
+    <!--<td>{{ form.username }}</td>-->
+<!--</tr>-->
+<!--<tr>-->
+    <!--<td>{{ form.password.label_tag }}</td>-->
+    <!--<td>{{ form.password }}</td>-->
+<!--</tr>-->
+<!--</table>-->
+ <input type="text" placeholder="username"/>
+                <input type="password" placeholder="password"/>
+                <button>login</button>
+                <input type="hidden" name="next" value="{{ next }}" />
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+                {# Assumes you setup the password_reset view in your URLconf #}
+                <p class="message"><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+<!--<input type="submit" value="login" />-->
+<!--<input type="hidden" name="next" value="{{ next }}" />-->
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
