--- a/hci/stud_assess/templates/stud_assess/home.html
+++ b/hci/stud_assess/templates/stud_assess/home.html
@@ -1,3 +1,55 @@
-<html>
-    <h1>Welcome page!</h1>
-</html>
+{% block content %}
+
+{% if form.errors %}
+<p>Your username and password didn't match. Please try again.</p>
+{% endif %}
+
+{% if next %}
+    {% if user.is_authenticated %}
+    <p>Your account doesn't have access to this page. To proceed,
+    please login with an account that has access.</p>
+    {% else %}
+    <p>Please login to see this page.</p>
+    {% endif %}
+{% endif %}
+
+<head>
+    <meta charset="UTF-8">
+    <title>Student Assessment Tool</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static "stud_assess/css/style.css" %}" />
+</head>
+
+<body>
+    <h2 style="text-align:center;"> Welcome to the Student Assessment Portal!</h2>
+    <div class="login-page">
+         <h3> Teacher's Login :</h3>
+        <div class="form">
+            <form class="register-form">
+                  <input type="text" placeholder="name"/>
+                  <input type="password" placeholder="password"/>
+                  <input type="text" placeholder="email address"/>
+                  <button>create</button>
+                  <p class="message">Already registered? <a href="#">Sign In</a></p>
+            </form>
+
+            <form class="login-form" method="post" action="{% url 'login' %}">
+                {% csrf_token %}
+                <input type="text" placeholder="username"/>
+                <input type="password" placeholder="password"/>
+                <button>login</button>
+                <input type="hidden" name="next" value="{{ next }}" />
+
+                {# Assumes you setup the password_reset view in your URLconf #}
+                <p class="message"><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+        </div>
+    </div>
+
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    {% load static %}
+    <script src="{% static "stud_assess/js/index.js" %}"></script>
+</body>
+
+{% endblock %}
